# vasm

./: .gitignore  CMakeLists.txt  LICENSE  a.out  errorTests.vas  test.vas  test2.vas
compiler/: CMakeLists.txt
compiler/src/: main.cpp
fakes/: CMakeLists.txt
fakes/include/codegen/: FakeOutputFormat.h
fakes/src/codegen/: FakeOutputFormat.cpp
framework/: CMakeLists.txt
framework/include/codegen/: Binary.h  Elf.h  IOutputFormat.h  Opcodes.h  Pe.h
framework/include/codegen/builder/: Instruction.h  ModRM.h  OpcodeBuilder.h
framework/include/error/: ErrorReporter.h
framework/include/instruction/: Builder.h  Directive.h  Instruction.h  Label.h  NoOperandInstruction.h  Operand.h  SingleOperandInstruction.h  TwoOperandInstruction.h  Value.h
framework/include/instruction/noOperandInstruction/: RetInstruction.h  SyscallInstruction.h
framework/include/instruction/operand/: Immediate.h  Label.h  Memory.h  Register.h  String.h
framework/include/instruction/singleOperandInstruction/: CallInstruction.h  DeclInstruction.h  IncDecInstruction.h  IntInstruction.h  JccInstruction.h  JmpInstruction.h  PopInstruction.h  PushInstruction.h
framework/include/instruction/twoOperandInstruction/: AddSubInstruction.h  LeaInstruction.h  LogicalInstruction.h  MovInstruction.h  OutInInstruction.h  ShiftRotateInstruction.h  TestInstruction.h  XchgInstruction.h
framework/include/lexer/: Lexer.h  Token.h
framework/include/parser/: NewParser.h  Parser.h
framework/include/vasm/codegen/: Binary.h  Elf.h  IOutputFormat.h  Jit.h  Opcodes.h  Pe.h
framework/include/vasm/codegen/builder/: Instruction.h  ModRM.h  OpcodeBuilder.h
framework/include/vasm/error/: ErrorMessages.h  ErrorReporter.h  IErrorReporter.h
framework/include/vasm/instruction/: Builder.h  Directive.h  Instruction.h  Label.h  NoOperandInstruction.h  Operand.h  SingleOperandInstruction.h  TwoOperandInstruction.h  Value.h  VariableOperandInstruction.h
framework/include/vasm/instruction/operand/: Immediate.h  Label.h  Memory.h  Register.h  Relative.h  String.h
framework/include/vasm/instruction/singleOperandInstruction/: CallInstruction.h  DeclInstruction.h  Grp4Instruction.h  IncDecInstruction.h  IntInstruction.h  JccInstruction.h  JmpInstruction.h  PopInstruction.h  PushInstruction.h  SetccInstruction.h
framework/include/vasm/instruction/twoOperandInstruction/: LeaInstruction.h  LogicalInstruction.h  MovInstruction.h  OutInInstruction.h  ShiftRotateInstruction.h  TestInstruction.h  XchgInstruction.h
framework/include/vasm/instruction/variableOperandInstruction/: IMulInstruction.h
framework/include/vasm/lexer/: Lexer.h  Token.h
framework/include/vasm/parser/: Parser.h
framework/src/codegen/: Binary.cpp  Elf.cpp  Pe.cpp
framework/src/codegen/builder/: Instruction.cpp  ModRM.cpp  OpcodeBuilder.cpp
framework/src/error/: ErrorReporter.cpp
framework/src/instruction/: Directive.cpp  Label.cpp
framework/src/instruction/noOperandInstruction/: RetInstruction.cpp  SyscallInstruction.cpp
framework/src/instruction/operand/: Immediate.cpp  Label.cpp  Memory.cpp  Register.cpp  Relative.cpp  String.cpp
framework/src/instruction/singleOperandInstruction/: CallInstruction.cpp  IntInstruction.cpp  JmpInstruction.cpp  PopInstruction.cpp  PushInstruction.cpp
framework/src/instruction/twoOperandInstruction/: LeaInstruction.cpp  MovInstruction.cpp  TestInstruction.cpp  XchgInstruction.cpp
framework/src/instruction/variableOperandInstruction/: IMulInstruction.cpp
framework/src/lexer/: Lexer.cpp  Token.cpp
framework/src/parser/: NewParser.cpp  Parser.cpp
include/codegen/: Binary.h  Elf.h  Opcodes.h  OutputFormat.h  Pe.h
include/lexer/: Lexer.h  Token.h
include/parser/: Parser.h
src/: main.cpp
src/codegen/: Binary.cpp  Elf.cpp  Pe.cpp
src/lexer/: Lexer.cpp  Token.cpp
src/parser/: Parser.cpp
tests/: CMakeLists.txt
tests/include/: Assert.h  Test.h  VasmAssert.h
tests/src/: Test.cpp
tests/src/lexer/: LexerTests.cpp
tests/src/parser/: ParserTests.cpp
